--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">App</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="app_name">HobbySeeker</string>
+    <string name="title_activity_main">HobbySeeker</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
